--- a/.github/workflows/main-cicd.yml
+++ b/.github/workflows/main-cicd.yml
@@ -66,3 +66,85 @@ needs: integrate-test-inspect # Jalankan setelah job sebelumnya sukses
 steps:
 - name: Checkout Kode
 uses: actions/checkout@v4
+- name: Set up Docker Buildx
+
+uses: docker/setup-buildx-action@v3
+
+
+# Opsional: Login ke Docker Hub jika ingin push image
+
+# - name: Login ke Docker Hub
+
+# if: github.event_name == 'push' && github.ref == 'refs/heads/main'
+
+# uses: docker/login-action@v3
+
+# with:
+
+# username: ${{ secrets.DOCKERHUB_USERNAME }}
+
+# password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+
+- name: Build Docker image
+
+uses: docker/build-push-action@v5
+
+with:
+
+context: .
+
+file: ./Dockerfile/ Dockerfile
+
+push: false # Set 'true' untuk push ke registry (misal Docker Hub)
+
+tags: local/kalkulator-cicd:latest # Ganti jika push ke registry
+
+# Contoh jika push: ${{ secrets.DOCKERHUB_USERNAME }}/kalkulator-cicd:latest
+
+
+deploy-to-github-pages:
+
+name: Deploy ke GitHub Pages (Continuous Delivery/Deployment)
+
+runs-on: ubuntu-latest
+
+needs: integrate-test-inspect # Pastikan tes dan inspeksi lulus sebelum deploy
+
+if: github.event_name == 'push' && github.ref == 'refs/heads/main' # Hanya deploy dari branch main
+
+permissions:
+
+contents: write # Diperlukan untuk push ke branch gh-pages
+
+steps:
+
+- name: Checkout Kode
+
+uses: actions/checkout@v4
+
+
+# Jika ada langkah build sebelum deploy (misalnya, optimasi aset)
+
+# - name: Build Halaman Web (jika perlu)
+
+# run: npm install && npm run build-static # Contoh
+
+
+- name: Deploy ke GitHub Pages
+
+uses: peaceiris/actions-gh-pages@v3
+
+with:
+
+github_token: ${{ secrets.GITHUB_TOKEN }}
+
+publish_dir: ./ # Direktori yang akan di-deploy (root untuk kalkulator ini)
+
+# publish_branch: gh-pages # Default branch tujuan adalah gh-pages
+
+# user_name: 'github-actions[bot]'
+
+# user_email: 'github-actions[bot]@users.noreply.github.com'
+
+# commit_message: 'Deploy kalkulator ke GitHub Pages'
