--- a/.github/workflows/main-cicd.yml
+++ b/.github/workflows/main-cicd.yml
@@ -30,7 +30,7 @@ with:
 
 fetch-depth: 0 # Diperlukan untuk analisis SonarQube yang akurat
 
-
+steps:
 - name: Setup Node.js
 
 uses: actions/setup-node@v4
@@ -48,7 +48,7 @@ node-version: '18' # atau versi LTS terbaru
 
 # run: echo "Tidak ada langkah build spesifik."
 
-
+steps:
 - name: Jalankan Tes Unit (Continuous Testing)
 
 run: |
@@ -66,7 +66,7 @@ distribution: 'temurin'
 
 java-version: '17'
 
-
+steps:
 - name: Cache paket SonarQube
 
 uses: actions/cache@v4
@@ -141,7 +141,7 @@ uses: docker/setup-buildx-action@v3
 
 # password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-
+steps:
 - name: Build Docker image
 
 uses: docker/build-push-action@v5
@@ -185,6 +185,7 @@ uses: actions/checkout@v4
 # - name: Build Halaman Web (jika perlu)
 
 # run: npm install && npm run build-static # Contoh
+steps:
 - name: Deploy ke GitHub Pages
 
 uses: peaceiris/actions-gh-pages@v3
