Add CI/CD pipeline for calculator with all stages REVISI 4

--- a/.github/workflows/main-cicd.yml
+++ b/.github/workflows/main-cicd.yml
@@ -44,19 +44,17 @@ jobs:
           restore-keys: ${{ runner.os }}-sonar
 
       - name: Analisis SonarCloud (Continuous Inspection)
-        uses: SonarSource/sonarcloud-github-action@master
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-        with:
-          projectBaseDir: .
-          args: >
-            -Dsonar.organization=${{ secrets.SONAR_ORGANIZATION }}
-            -Dsonar.projectKey=${{ secrets.SONAR_PROJECT_KEY }}
-            -Dsonar.sources=.
-            -Dsonar.host.url=${{ secrets.SONAR_HOST_URL }}
-            # Jika ada laporan cakupan tes (misal dari Jest LCOV), tambahkan:
-            # -Dsonar.javascript.lcov.reportPaths=coverage/lcov.info
+  uses: SonarSource/sonarqube-scan-action@v5.0.0
+  env:
+    GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+    SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+  with:
+    args: >
+      -Dsonar.organization=${{ secrets.SONAR_ORGANIZATION }}
+      -Dsonar.projectKey=${{ secrets.SONAR_PROJECT_KEY }}
+      -Dsonar.sources=.
+      -Dsonar.host.url=${{ secrets.SONAR_HOST_URL }}
+      # -Dsonar.javascript.lcov.reportPaths=coverage/lcov.info (jika ada coverage)
 
   build-docker-image:
     name: Build Docker Image
