--- a/.github/workflows/main-cicd.yml
+++ b/.github/workflows/main-cicd.yml
@@ -14,29 +14,25 @@ jobs:
       - name: Checkout Kode (Continuous Integration)
         uses: actions/checkout@v4
         with:
-          fetch-depth: 0 # Diperlukan untuk analisis SonarQube yang akurat
+          fetch-depth: 0 # Untuk analisis SonarQube yang akurat
 
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: '18' # atau versi LTS terbaru
-
-      # Langkah Build (jika ada)
-      # - name: Build Aplikasi (jika perlu)
-      #   run: echo "Tidak ada langkah build spesifik."
+          node-version: '18'
 
       - name: Jalankan Tes Unit (Continuous Testing)
         run: |
           echo "Menjalankan tes unit kalkulator..."
           node tests/calculator.test.js
 
-      - name: Setup JDK 17 untuk SonarQube
+      - name: Setup JDK 17 untuk SonarCloud
         uses: actions/setup-java@v4
         with:
           distribution: 'temurin'
           java-version: '17'
 
-      - name: Cache paket SonarQube
+      - name: Cache paket SonarCloud
         uses: actions/cache@v4
         with:
           path: ~/.sonar/cache
@@ -44,17 +40,16 @@ jobs:
           restore-keys: ${{ runner.os }}-sonar
 
       - name: Analisis SonarCloud (Continuous Inspection)
-  uses: SonarSource/sonarqube-scan-action@v5.0.0
-  env:
-    GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-    SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-  with:
-    args: >
-      -Dsonar.organization=${{ secrets.SONAR_ORGANIZATION }}
-      -Dsonar.projectKey=${{ secrets.SONAR_PROJECT_KEY }}
-      -Dsonar.sources=.
-      -Dsonar.host.url=${{ secrets.SONAR_HOST_URL }}
-      # -Dsonar.javascript.lcov.reportPaths=coverage/lcov.info (jika ada coverage)
+        uses: SonarSource/sonarqube-scan-action@v5.0.0
+        env:
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+        with:
+          args: >
+            -Dsonar.organization=${{ secrets.SONAR_ORGANIZATION }}
+            -Dsonar.projectKey=${{ secrets.SONAR_PROJECT_KEY }}
+            -Dsonar.sources=.
+            -Dsonar.host.url=${{ secrets.SONAR_HOST_URL }}
+            # -Dsonar.javascript.lcov.reportPaths=coverage/lcov.info
 
   build-docker-image:
     name: Build Docker Image
@@ -67,9 +62,8 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
-      # Opsional: Login ke Docker Hub jika ingin push image
+      # Login opsional ke Docker Hub (aktifkan jika perlu push)
       # - name: Login ke Docker Hub
-      #   if: github.event_name == 'push' && github.ref == 'refs/heads/main'
       #   uses: docker/login-action@v3
       #   with:
       #     username: ${{ secrets.DOCKERHUB_USERNAME }}
@@ -80,12 +74,11 @@ jobs:
         with:
           context: .
           file: ./Dockerfile
-          push: false # Set 'true' untuk push ke registry (misal Docker Hub)
+          push: false
           tags: local/kalkulator-cicd:latest
-          # Contoh jika push: ${{ secrets.DOCKERHUB_USERNAME }}/kalkulator-cicd:latest
 
   deploy-to-github-pages:
-    name: Deploy ke GitHub Pages (Continuous Delivery/Deployment)
+    name: Deploy ke GitHub Pages (Continuous Deployment)
     runs-on: ubuntu-latest
     needs: integrate-test-inspect
     if: github.event_name == 'push' && github.ref == 'refs/heads/main'
@@ -95,8 +88,8 @@ jobs:
       - name: Checkout Kode
         uses: actions/checkout@v4
 
-      # Jika ada langkah build sebelum deploy (misalnya, optimasi aset)
-      # - name: Build Halaman Web (jika perlu)
+      # Build halaman web jika perlu
+      # - name: Build Halaman Web
       #   run: npm install && npm run build-static
 
       - name: Deploy ke GitHub Pages
@@ -104,7 +97,3 @@ jobs:
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./
-          # publish_branch: gh-pages
-          # user_name: 'github-actions[bot]'
-          # user_email: 'github-actions[bot]@users.noreply.github.com'
-          # commit_message: 'Deploy kalkulator ke GitHub Pages'
