--- a/.github/workflows/main-cicd.yml
+++ b/.github/workflows/main-cicd.yml
@@ -59,10 +59,10 @@ jobs:
             # Jika ada laporan cakupan tes (misal dari Jest LCOV), tambahkan:
             # -Dsonar.javascript.lcov.reportPaths=coverage/lcov.info
 
-  build-docker-image:
+    build-docker-image:
     name: 🐳 Build Docker Image
     runs-on: ubuntu-latest
-    needs: integrate-test-inspect # Jalankan setelah job sebelumnya sukses
+    needs: integrate-test-inspect
     steps:
       - name: ⬇️ Checkout Kode
         uses: actions/checkout@v4
@@ -70,22 +70,13 @@ jobs:
       - name: 🛠️ Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
-      # Opsional: Login ke Docker Hub jika ingin push image
-      # - name: 🔑 Login ke Docker Hub
-      #   if: github.event_name == 'push' && github.ref == 'refs/heads/main'
-      #   uses: docker/login-action@v3
-      #   with:
-      #     username: ${{ secrets.DOCKERHUB_USERNAME }}
-      #     password: ${{ secrets.DOCKERHUB_TOKEN }}
-
       - name: 🏗️ Build Docker image
         uses: docker/build-push-action@v5
         with:
           context: .
-          file: ./Dockerfile/ Dockerfile
-          push: false # Set 'true' untuk push ke registry (misal Docker Hub)
-          tags: local/kalkulator-cicd:latest # Ganti jika push ke registry
-          # Contoh jika push: ${{ secrets.DOCKERHUB_USERNAME }}/kalkulator-cicd:latest
+          file: ./Dockerfile  # ✅ ini sudah benar sekarang
+          push: false
+          tags: local/kalkulator-cicd:latest
 
   deploy-to-github-pages:
     name: 🚀 Deploy ke GitHub Pages (Continuous Delivery/Deployment)
