--- a/.github/workflows/main-cicd.yml
+++ b/.github/workflows/main-cicd.yml
@@ -14,17 +14,12 @@ jobs:
       - name: ⬇️ Checkout Kode (Continuous Integration)
         uses: actions/checkout@v4
         with:
-          fetch-depth: 0 # Diperlukan untuk analisis SonarQube yang akurat
+          fetch-depth: 0
 
       - name: 🔧 Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: '18' # atau versi LTS terbaru
-
-      # Langkah Build (jika ada, misal: npm install, npm run build)
-      # Untuk kalkulator statis ini, tidak ada build JS/CSS khusus
-      # - name: 🔨 Build Aplikasi (jika perlu)
-      #   run: echo "Tidak ada langkah build spesifik."
+          node-version: '18'
 
       - name: 🧪 Jalankan Tes Unit (Continuous Testing)
         run: |
@@ -45,7 +40,7 @@ jobs:
           restore-keys: ${{ runner.os }}-sonar
 
       - name: 🧐 Analisis SonarCloud (Continuous Inspection)
-        uses: SonarSource/sonarcloud-github-action@master # Selalu gunakan versi terbaru atau stabil
+        uses: SonarSource/sonarcloud-github-action@master
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
@@ -56,11 +51,10 @@ jobs:
             -Dsonar.projectKey=${{ secrets.SONAR_PROJECT_KEY }}
             -Dsonar.sources=.
             -Dsonar.host.url=${{ secrets.SONAR_HOST_URL }}
-            # Jika ada laporan cakupan tes (misal dari Jest LCOV), tambahkan:
             # -Dsonar.javascript.lcov.reportPaths=coverage/lcov.info
 
-    build-docker-image:
-    - name: 🐳 Build Docker Image
+  build-docker-image:
+    name: 🐳 Build Docker Image
     runs-on: ubuntu-latest
     needs: integrate-test-inspect
     steps:
@@ -74,31 +68,23 @@ jobs:
         uses: docker/build-push-action@v5
         with:
           context: .
-          file: ./Dockerfile  # ✅ ini sudah benar sekarang
+          file: ./Dockerfile
           push: false
           tags: local/kalkulator-cicd:latest
 
   deploy-to-github-pages:
     name: 🚀 Deploy ke GitHub Pages (Continuous Delivery/Deployment)
     runs-on: ubuntu-latest
-    needs: integrate-test-inspect # Pastikan tes dan inspeksi lulus sebelum deploy
-    if: github.event_name == 'push' && github.ref == 'refs/heads/main' # Hanya deploy dari branch main
+    needs: integrate-test-inspect
+    if: github.event_name == 'push' && github.ref == 'refs/heads/main'
     permissions:
-      contents: write # Diperlukan untuk push ke branch gh-pages
+      contents: write
     steps:
       - name: ⬇️ Checkout Kode
         uses: actions/checkout@v4
-
-      # Jika ada langkah build sebelum deploy (misalnya, optimasi aset)
-      # - name: 🔨 Build Halaman Web (jika perlu)
-      #   run: npm install && npm run build-static # Contoh
 
       - name: 🌍 Deploy ke GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./ # Direktori yang akan di-deploy (root untuk kalkulator ini)
-          # publish_branch: gh-pages # Default branch tujuan adalah gh-pages
-          # user_name: 'github-actions[bot]'
-          # user_email: 'github-actions[bot]@users.noreply.github.com'
-          # commit_message: 'Deploy kalkulator ke GitHub Pages'
+          publish_dir: ./
