--- a/.github/workflows/main-cicd.yml
+++ b/.github/workflows/main-cicd.yml
@@ -68,7 +68,7 @@ jobs:
         uses: docker/build-push-action@v5
         with:
           context: .
-          file: /Dockerfile
+          file: ./Dockerfile/Dockerfile
           push: false
           tags: local/kalkulator-cicd:latest
 
